# radinage

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  default.conf.template  docker-compose.yml  nginx.conf
.github/: release.yml
.github/workflows/: docker-build.yml  docker-publish.yml  helm-publish.yml  lint.yml  test.yml
helm/radinage/: Chart.yaml  README.md  values.yaml
helm/radinage/templates/: _helpers.tpl  ingress.yaml
helm/radinage/templates/api/: deployment.yaml  hpa.yaml  service.yaml  (+1 more)
radinage-api/: Cargo.toml
radinage-api/migrations/: 001_users.sql  002_operations.sql  003_budgets.sql  004_monthly_budgets.sql  005_budget_periods_optional_end_date.sql  006_budget_recurrence.sql  007_budget_periods_year_month.sql  008_operations_ignored.sql  009_drop_monthly_budgets.sql  010_operations_effective_date.sql  011_invitation_token.sql
radinage-api/src/: config.rs  db.rs  error.rs  main.rs  schema.rs
radinage-api/src/auth/: claims.rs  middleware.rs  mod.rs
radinage-api/src/domain/: budget.rs  mod.rs  operation.rs  user.rs
radinage-api/src/handlers/: auth.rs  budgets.rs  data.rs  import.rs  mod.rs  monthly_operations.rs  operations.rs  summary.rs  users.rs
radinage-api/src/repositories/: budget.rs  mod.rs  operation.rs  user.rs
radinage-api/src/services/: importer.rs  matcher.rs  mod.rs
radinage-mcp/: Cargo.toml
radinage-mcp/src/: config.rs  main.rs  openapi.rs  server.rs
radinage-webapp/: biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
radinage-webapp/src/: main.tsx  routeTree.gen.ts  styles.css  test-setup.ts  theme.ts
radinage-webapp/src/__tests__/: activate.test.tsx  admin.test.tsx  api.test.ts  auth.test.ts  budget-modal.test.tsx  budget-utils.test.ts  budgets.test.tsx  home.test.tsx  import-modal.test.tsx  login.test.tsx  operations.test.tsx  settings-data.test.tsx  settings.test.tsx  stats.test.tsx  summary.test.tsx
radinage-webapp/src/components/: BudgetModal.tsx  ImportModal.tsx
radinage-webapp/src/i18n/: index.ts
radinage-webapp/src/lib/: api.ts  budget-utils.ts  hooks.ts  types.ts
radinage-webapp/src/routes/: __root.tsx  activate.tsx  admin.tsx  budgets.tsx  index.tsx  login.tsx  operations.tsx  settings.tsx  stats.tsx  summary.tsx
radinage-webapp/src/stores/: auth.ts
(+12 files in other folders)
