[[bin]]
name = "radinage-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = {version = "4.6", features = ["derive", "env"]}
http = "1.4"
http-body-util = "0.1"
hyper = {version = "1.8", features = ["server", "http1"]}
hyper-util = {version = "0.1", features = ["tokio"]}
reqwest = {version = "0.12", features = ["json"]}
rmcp = {version = "1.4", features = ["server", "transport-streamable-http-server"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.50", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[package]
edition = "2024"
name = "radinage-mcp"
version.workspace = true
